# depcon

./: .env.example  .gitignore  .pre-commit-hooks.yaml  CHECKLIST.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  depcon.toml.example  pyproject.toml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: release.yml
depcon/: TUI_SPEC.md  agent.py  cli.py  config.py  fix.py  hook.py  smoketest.py  tui.py  web.py
depcon/static/: index.html
depcon/tools/: dynatrace.py
examples/fastapi-service/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
tests/: test_agent.py  test_smoketest.py  test_tools.py
