[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "depcon"
version = "0.1.0"
description = "Pre-commit hook that validates your service with real Dynatrace telemetry before every commit"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12.0",
    "textual>=0.60.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "google-adk>=0.5.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
depcon = "depcon.cli:app"
depcon-hook = "depcon.hook:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["depcon"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
