[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "depcon-target"
version = "0.1.0"
description = "Example FastAPI service — target for Depcon smoke tests"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-exporter-otlp-proto-http>=1.23.0",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "opentelemetry-instrumentation-logging>=0.44b0",
    "python-dotenv>=1.0.0",
]


[tool.hatch.build.targets.wheel]
sources = ["."]
packages = ["."]
